Details
-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.2, 4.7.3
-
None
-
windows 7
Description
With below code, tooltip text does not show. Removing padding and border shows text correctly. Patch attached to fix this bug.
#include <QtGui/QApplication> #include "mainwindow.h" #include <QToolButton> int main(int argc, char *argv[]) { QApplication a(argc, argv); QToolButton button; button.setStyleSheet( "QToolTip {\ padding: 6px;\ border: 1px solid rgb(199, 202, 204);\ background-color: rgb(227, 243, 252);\ color: rgb(64, 64, 66);\ }"); button.setToolTip("my tooltip"); button.show(); return a.exec(); }
Attachments
Issue Links
- resulted in
-
QTBUG-41313 Setting background-color for QToolTip does not work unless border is specified
-
- Reported
-