Qt: TimeLabel: set element selector to stylesheet (fix #9466)

Due to stylesheets inheritance, QTBUG-20027 happens on tooltip.